@@ -15,5 +15,10 @@ subprojects { Project subproject ->
             }
         }
     }
+    tasks.withType(Test) {
+        if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_15)) {
+            jvmArgs "--enable-preview"
+        }
+    }
 }
 
